# plons_library

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog_8md.html  Detronade.md  Doxyfile  Guidelines.md  Guidelines_8md.html  License_8md.html  Readme.md  Readme_8md.html  annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen-custom-header.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  md_Changelog.html  md_Guidelines.html  md_License.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaceplons.html  namespaceplons.js  namespaceplons_1_1m.html  namespaceplons_1_1m.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  (+40 more)
.github/workflows/: doxygen-gh-pages.yml
doxygen-1.9.6/: README
doxygen-1.9.6/html/: translator_report.txt
doxygen-1.9.6/html/examples/diagrams/html/: class_c.html  class_d.html  class_e.html  diagrams__a_8h.html  diagrams__b_8h.html  diagrams__c_8h.html  diagrams__d_8h.html  diagrams__e_8h.html
examples/: CMakeLists.txt  Readme.md
include/: plons_detronade.hpp  plons_grapons.hpp  plons_library.hpp  plons_library_config.hpp.in  plons_math.hpp  plons_property.hpp
search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_3.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_b.js
src/: detronade.cpp
tests/: CMakeLists.txt  tester.cpp  tester.hpp
